--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,13 @@
 {
-    "liveServer.settings.port": 5501
+  "liveServer.settings.port": 5501,
+  "liveServer.settings.host": "localhost",
+  "liveServer.settings.fullReload": true,
+  "liveServer.settings.wait": 1000,
+  "liveServer.settings.ignoreFiles": [
+    ".vscode/**",
+    "**/*.scss",
+    "**/*.sass"
+  ],
+  "files.autoSave": "afterDelay",
+  "files.autoSaveDelay": 1000
 }
